force-app/main/default/objects/CAZ_Assessment2__dlm/CAZ_Assessment2__dlm.object-meta.xml
<CustomObject>
    <label>CAZ Assessment</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>CAZ Assessment</labelOverride>
        <masterLabel>CAZ Assessment</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>