force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_borrowingentityamountrequired__c.field-meta.xml
<CustomField>
    <fullName>bc_borrowingentityamountrequired__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Borrowing Entity Amount Required</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Borrowing Entity Amount Required</labelOverride>
        <masterLabel>Borrowing Entity Amount Required</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>