force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_borrowingpurposedetails__c.field-meta.xml
<CustomField>
    <fullName>bc_borrowingpurposedetails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Borrowing Purpose Details</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Borrowing Purpose Details</labelOverride>
        <masterLabel>Borrowing Purpose Details</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>