force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_capacitytorepay__c.field-meta.xml
<CustomField>
    <fullName>bc_capacitytorepay__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CapacityToRepay</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CapacityToRepay</labelOverride>
        <masterLabel>CapacityToRepay</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>