force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_capacitytorepaydetails__c.field-meta.xml
<CustomField>
    <fullName>bc_capacitytorepaydetails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capacity To Repay Details</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Capacity To Repay Details</labelOverride>
        <masterLabel>Capacity To Repay Details</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>