force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_productassetfinancefrequency__c.field-meta.xml
<CustomField>
    <fullName>bc_productassetfinancefrequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Asset Finance Frequency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Asset Finance Frequency</labelOverride>
        <masterLabel>Product Asset Finance Frequency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>