force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_productassetfinanceterm__c.field-meta.xml
<CustomField>
    <fullName>bc_productassetfinanceterm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Asset Finance Term</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Asset Finance Term</labelOverride>
        <masterLabel>Product Asset Finance Term</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>