force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_productigrepaymenttype__c.field-meta.xml
<CustomField>
    <fullName>bc_productigrepaymenttype__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product IG Repayment Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product IG Repayment Type</labelOverride>
        <masterLabel>Product IG Repayment Type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>