force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_productindemnityguaranteeamount__c.field-meta.xml
<CustomField>
    <fullName>bc_productindemnityguaranteeamount__c</fullName>
    <label>Product Indemnity Guarantee Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Indemnity Guarantee Amount</labelOverride>
        <masterLabel>Product Indemnity Guarantee Amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>