force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_productindemnityguaranteefrequency__c.field-meta.xml
<CustomField>
    <fullName>bc_productindemnityguaranteefrequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Indemnity Guarantee Frequency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Indemnity Guarantee Frequency</labelOverride>
        <masterLabel>Product Indemnity Guarantee Frequency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>