force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_producttermloanamount__c.field-meta.xml
<CustomField>
    <fullName>bc_producttermloanamount__c</fullName>
    <label>Product Term Loan Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product Term Loan Amount</labelOverride>
        <masterLabel>Product Term Loan Amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>