force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_producttermloanselect__c.field-meta.xml
<CustomField>
    <fullName>bc_producttermloanselect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product TermLoan Select</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Product TermLoan Select</labelOverride>
        <masterLabel>Product TermLoan Select</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>