force-app/main/default/objects/CAZ_Assessment2__dlm/fields/bc_securitycontribution__c.field-meta.xml
<CustomField>
    <fullName>bc_securitycontribution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security Contribution</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Security Contribution</labelOverride>
        <masterLabel>Security Contribution</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>