force-app/main/default/objects/CAZ_Assessment2__dlm/fields/confirmationcommercialnextstepsselect__c.field-meta.xml
<CustomField>
    <fullName>confirmationcommercialnextstepsselect__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps Select</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Next Steps Select</labelOverride>
        <masterLabel>Next Steps Select</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>