force-app/main/default/objects/CAZ_Assessment2__dlm/fields/confirmationcommercialreviewsummary__c.field-meta.xml
<CustomField>
    <fullName>confirmationcommercialreviewsummary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Summary</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Review Summary</labelOverride>
        <masterLabel>Review Summary</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>