force-app/main/default/objects/CAZ_Assessment2__dlm/fields/conirmationcommercialnextsteps__c.field-meta.xml
<CustomField>
    <fullName>conirmationcommercialnextsteps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Next Steps</labelOverride>
        <masterLabel>Next Steps</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>