force-app/main/default/objects/CAZ_Assessment2__dlm/fields/created_by__c.field-meta.xml
<CustomField>
    <fullName>created_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created By</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Created By</labelOverride>
        <masterLabel>Created By</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>