force-app/main/default/objects/CAZ_Assessment2__dlm/fields/created_date__c.field-meta.xml
<CustomField>
    <fullName>created_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Created Date</labelOverride>
        <masterLabel>Created Date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>