force-app/main/default/objects/CAZ_Assessment2__dlm/fields/customer_id__c.field-meta.xml
<CustomField>
    <fullName>customer_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Customer Id</labelOverride>
        <masterLabel>Customer Id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>