force-app/main/default/objects/CAZ_Assessment2__dlm/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Id</labelOverride>
        <masterLabel>Id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>