force-app/main/default/objects/CAZ_Assessment2__dlm/fields/pba_haveyouspokenaboutpb1__c.field-meta.xml
<CustomField>
    <fullName>pba_haveyouspokenaboutpb1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Have You Spoken About PB1</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Have You Spoken About PB1</labelOverride>
        <masterLabel>Have You Spoken About PB1</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>