force-app/main/default/objects/CAZ_Assessment2__dlm/fields/pba_tellmeaboutyourpersonalbanking__c.field-meta.xml
<CustomField>
    <fullName>pba_tellmeaboutyourpersonalbanking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tell Me About Your Personal Banking</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Tell Me About Your Personal Banking</labelOverride>
        <masterLabel>Tell Me About Your Personal Banking</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>