force-app/main/default/objects/CAZ_Assessment2__dlm/fields/pbc_haveyouspokenaboutpb2__c.field-meta.xml
<CustomField>
    <fullName>pbc_haveyouspokenaboutpb2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Have You Spoken About PB2</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Have You Spoken About PB2</labelOverride>
        <masterLabel>Have You Spoken About PB2</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>