force-app/main/default/objects/CAZ_Assessment2__dlm/fields/pbc_tellmeaboutyourpersonalbanking__c.field-meta.xml
<CustomField>
    <fullName>pbc_tellmeaboutyourpersonalbanking__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tell MeAbout Your Personal Banking</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Tell MeAbout Your Personal Banking</labelOverride>
        <masterLabel>Tell MeAbout Your Personal Banking</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>