force-app/main/default/objects/CAZ_Assessment2__dlm/fields/pbc_tellmeaboutyourpersonalfinancegoals__c.field-meta.xml
<CustomField>
    <fullName>pbc_tellmeaboutyourpersonalfinancegoals__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tell Me AboutYour Personal Finance Goals</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Tell Me AboutYour Personal Finance Goals</labelOverride>
        <masterLabel>Tell Me AboutYour Personal Finance Goals</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>