force-app/main/default/objects/CAZ_Assessment2__dlm/fields/processed_at__c.field-meta.xml
<CustomField>
    <fullName>processed_at__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processed At</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Processed At</labelOverride>
        <masterLabel>Processed At</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>