force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tba_howdoyoufundthisimportexport__c.field-meta.xml
<CustomField>
    <fullName>tba_howdoyoufundthisimportexport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How Do You Fund This Import Export</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>How Do You Fund This Import Export</labelOverride>
        <masterLabel>How Do You Fund This Import Export</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>