force-app/main/default/objects/CAZ_Assessment2__dlm/fields/tba_monthswithsurpluscash__c.field-meta.xml
<CustomField>
    <fullName>tba_monthswithsurpluscash__c</fullName>
    <label>Months With Surplus Cash</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Months With Surplus Cash</labelOverride>
        <masterLabel>Months With Surplus Cash</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>